# legal_backend_v1

./: .env  .env.example  .gitignore  README.md  antigravity_project_change_log.md  check_index.py  checkdb.py  main.py  my_plan.txt  output.txt  pyproject.toml  requirements.txt  setup.md  test_crawler.py  test_hybrid.py
app/api/: routes.py
app/api/v1/: router.py  routes.py
app/api/v1/endpoints/: chat.py  health.py  pipeline.py
app/core/: config.py  logger.py  pipeline_registry.py
app/crawler/: base.py  client.py  playwright_crawler.py  registry.py
app/crawler/parsers/: base.py
app/crawler/pipelines/: stages.py
app/db/: session_store.py  vector_store.py
app/docs/: IMPLEMENTATION_OVERVIEW.md  PROJECT_SET_UP.md  folder-structure.md  legal-ai-architecture.md
app/pipeline/: base.py  cleaner.py  executor.py  extractor.py  handlers.py  orchestrator.py  test_cleaner.py  test_extractor.py  tracker.py
app/pipeline/examples/: sample_pipeline.py
app/schemas/: pipeline.py
app/services/: groq_client.py  pipeline_service.py  rag_engine.py
app/utils/: bm25_index.py  embedder.py  prompt_builder.py  rrf.py
artifacts/superpowers/: brainstorm.md  execution.md  finish.md  plan.md
data/chroma/: chroma.sqlite3
docs/: Dynamic_Crawler_13_04_26.md  Ingestion_Pipeline_Readiness_Report.md  legal_ai_architecture.md  setup.md
scrapers/: crawler.py  html_parser.py  pipeline.py
scrapers/sources/: devgan.py
scratch/: test_full_pipeline.py  test_orchestrator.py  test_pipeline_handlers.py
scripts/: run_ingestion.py
sql/: v1_created_first_table.sql
