[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "fastapi>=0.135.3",
    "loguru>=0.7.3",
    "pandas>=3.0.2",
    "playwright>=1.58.0",
    "pyarrow>=23.0.1",
    "pydantic-settings>=2.13.1",
    "pymupdf4llm>=1.27.2.2",
    "uvicorn>=0.42.0",
]
